create profile fragment

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,9 +55,9 @@
         app:boxCornerRadiusBottomStart="10dp"
         app:boxCornerRadiusTopEnd="10dp"
         app:boxCornerRadiusTopStart="10dp"
-        app:boxStrokeColor="@color/lightGray"
+        app:boxStrokeColor="@color/gray"
         app:boxStrokeWidth="2dp"
-        app:helperTextTextColor="@color/lightGray"
+        app:helperTextTextColor="@color/gray"
         app:hintTextColor="@color/darkGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,10 +86,10 @@
         app:boxCornerRadiusBottomStart="10dp"
         app:boxCornerRadiusTopEnd="10dp"
         app:boxCornerRadiusTopStart="10dp"
-        app:boxStrokeColor="@color/lightGray"
+        app:boxStrokeColor="@color/gray"
         app:boxStrokeWidth="2dp"
         app:errorEnabled="true"
-        app:helperTextTextColor="@color/lightGray"
+        app:helperTextTextColor="@color/gray"
         app:hintTextColor="@color/darkGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
