--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,10 +29,10 @@
         app:boxCornerRadiusBottomStart="10dp"
         app:boxCornerRadiusTopEnd="10dp"
         app:boxCornerRadiusTopStart="10dp"
-        app:boxStrokeColor="@color/lightGray"
+        app:boxStrokeColor="@color/gray"
         app:boxStrokeWidth="2dp"
         app:errorEnabled="true"
-        app:helperTextTextColor="@color/lightGray"
+        app:helperTextTextColor="@color/gray"
         app:hintTextColor="@color/darkGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,9 +61,9 @@
         app:boxCornerRadiusBottomStart="10dp"
         app:boxCornerRadiusTopEnd="10dp"
         app:boxCornerRadiusTopStart="10dp"
-        app:boxStrokeColor="@color/lightGray"
+        app:boxStrokeColor="@color/gray"
         app:boxStrokeWidth="2dp"
-        app:helperTextTextColor="@color/lightGray"
+        app:helperTextTextColor="@color/gray"
         app:hintTextColor="@color/darkGray"
         app:startIconDrawable="@drawable/ic_person"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,9 +92,9 @@
         app:boxCornerRadiusBottomStart="10dp"
         app:boxCornerRadiusTopEnd="10dp"
         app:boxCornerRadiusTopStart="10dp"
-        app:boxStrokeColor="@color/lightGray"
+        app:boxStrokeColor="@color/gray"
         app:boxStrokeWidth="2dp"
-        app:helperTextTextColor="@color/lightGray"
+        app:helperTextTextColor="@color/gray"
         app:hintTextColor="@color/darkGray"
         app:startIconDrawable="@drawable/ic_email"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,9 +123,9 @@
         app:boxCornerRadiusBottomStart="10dp"
         app:boxCornerRadiusTopEnd="10dp"
         app:boxCornerRadiusTopStart="10dp"
-        app:boxStrokeColor="@color/lightGray"
+        app:boxStrokeColor="@color/gray"
         app:boxStrokeWidth="2dp"
-        app:helperTextTextColor="@color/lightGray"
+        app:helperTextTextColor="@color/gray"
         app:hintTextColor="@color/darkGray"
         app:passwordToggleEnabled="true"
         app:startIconDrawable="@drawable/ic_lock"
@@ -155,9 +155,9 @@
         app:boxCornerRadiusBottomStart="10dp"
         app:boxCornerRadiusTopEnd="10dp"
         app:boxCornerRadiusTopStart="10dp"
-        app:boxStrokeColor="@color/lightGray"
+        app:boxStrokeColor="@color/gray"
         app:boxStrokeWidth="2dp"
-        app:helperTextTextColor="@color/lightGray"
+        app:helperTextTextColor="@color/gray"
         app:hintTextColor="@color/darkGray"
         app:passwordToggleEnabled="true"
         app:startIconDrawable="@drawable/ic_lock"
