--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF2000</color>
-    <color name="lightGray">#C5C5C5</color>
+    <color name="gray">#C5C5C5</color>
+    <color name="lightGray">#EAEAEA</color>
     <color name="darkGray">#777777</color>
+    <color name="carrot">#fa8466</color>
+
 </resources>
