add app toolbar

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,8 @@
     <style name="LocalTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
     
     <style name="BottomNavText.Active" parent="@style/TextAppearance.AppCompat.Caption">
@@ -25,6 +27,10 @@
     </style>
 
     <style name="SwitchColor">
-        <item name="android:background">@color/carrot</item>
+        <item name="android:color">@color/carrot</item>
+    </style>
+
+    <style name="ToolbarTheme">
+        <item name="android:color">@color/red</item>
     </style>
 </resources>
